--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -812,6 +812,53 @@
       </widget>
      </item>
      <item>
+      <widget class="QWidget" name="stripesWidget" native="true">
+       <layout class="QHBoxLayout" name="horizontalLayout_11">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QLabel" name="label_11">
+          <property name="text">
+           <string>Stripes:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QDoubleSpinBox" name="stripesSpinBox">
+          <property name="toolTip">
+           <string>&lt;p&gt;The parameter to use when distance estimation is enabled.&lt;/p&gt;&lt;p&gt;Lower values reduce the minimum distance before a pixel is determined to be near the set, leading to thinner-looking pictures.&lt;/p&gt;</string>
+          </property>
+          <property name="decimals">
+           <number>2</number>
+          </property>
+          <property name="minimum">
+           <double>1.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>20.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>1.000000000000000</double>
+          </property>
+          <property name="value">
+           <double>6.000000000000000</double>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
       <widget class="QGroupBox" name="aspectBox">
        <property name="title">
         <string>Aspect</string>
