--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -1930,7 +1930,7 @@
     <string>Family z ↦ (z + 1/z)ⁿ (&quot;Facing A&quot;/&quot;Zazbcgd&quot;)</string>
    </property>
    <property name="toolTip">
-    <string>Family z ↦ (z + 1/z)ⁿ (&quot;Facing A&quot;/&quot;Zazbcgd&quot;)</string>
+    <string>Family z ↦ (z + c²/z)ⁿ (&quot;Facing A&quot;/&quot;Zazbcgd&quot;)</string>
    </property>
   </action>
   <action name="action_FormulaFacingB">
