--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -133,25 +133,44 @@
      </property>
      <widget class="QMenu" name="menuHybrid">
       <property name="title">
-       <string>Hybrid fractal</string>
+       <string>&amp;Hybrid fractal</string>
       </property>
       <addaction name="action_HybridOff"/>
       <addaction name="action_HybridOn"/>
      </widget>
-     <addaction name="action_FormulaStandard"/>
-     <addaction name="action_FormulaLambda"/>
-     <addaction name="action_FormulaSpider"/>
-     <addaction name="action_FormulaTricorn"/>
-     <addaction name="action_FormulaShip"/>
-     <addaction name="action_FormulaCeltic"/>
-     <addaction name="action_FormulaMix"/>
-     <addaction name="action_FormulaSqTwiceA"/>
-     <addaction name="action_FormulaSqTwiceB"/>
-     <addaction name="action_FormulaMagnetA"/>
-     <addaction name="action_FormulaFacing"/>
-     <addaction name="action_FormulaFacingB"/>
-     <addaction name="action_FormulaTest"/>
+     <widget class="QMenu" name="menuPolynomials">
+      <property name="title">
+       <string>&amp;Polynomials</string>
+      </property>
+      <addaction name="action_FormulaStandard"/>
+      <addaction name="action_FormulaLambda"/>
+      <addaction name="action_FormulaMix"/>
+      <addaction name="action_FormulaSqTwiceA"/>
+      <addaction name="action_FormulaSqTwiceB"/>
+     </widget>
+     <widget class="QMenu" name="menuRational">
+      <property name="title">
+       <string>&amp;Rational</string>
+      </property>
+      <addaction name="action_FormulaMagnetA"/>
+      <addaction name="action_FormulaFacing"/>
+      <addaction name="action_FormulaFacingB"/>
+      <addaction name="action_FormulaRings"/>
+     </widget>
+     <widget class="QMenu" name="menuNon_analytic">
+      <property name="title">
+       <string>&amp;Non-analytic</string>
+      </property>
+      <addaction name="action_FormulaShip"/>
+      <addaction name="action_FormulaTricorn"/>
+      <addaction name="action_FormulaCeltic"/>
+     </widget>
+     <addaction name="menuPolynomials"/>
+     <addaction name="menuRational"/>
+     <addaction name="menuNon_analytic"/>
      <addaction name="menuHybrid"/>
+     <addaction name="action_FormulaSpider"/>
+     <addaction name="action_FormulaTest"/>
     </widget>
     <widget class="QMenu" name="menuPower">
      <property name="title">
@@ -2175,6 +2194,17 @@
    </property>
    <property name="text">
     <string>White</string>
+   </property>
+  </action>
+  <action name="action_FormulaRings">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Family z ↦ c(z⁻ⁿ-(n/2)z⁻²) (&quot;Rings&quot;, Cczcpaczcp variant)</string>
+   </property>
+   <property name="toolTip">
+    <string>Rings</string>
    </property>
   </action>
  </widget>
