--- a/src/gradeditor.ui
+++ b/src/gradeditor.ui
@@ -34,6 +34,9 @@
      <property name="defaultDropAction">
       <enum>Qt::MoveAction</enum>
      </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::ContiguousSelection</enum>
+     </property>
      <property name="flow">
       <enum>QListView::LeftToRight</enum>
      </property>
