--- a/src/gradeditor.ui
+++ b/src/gradeditor.ui
@@ -224,7 +224,44 @@
               </layout>
              </widget>
             </item>
-            <item row="6" column="2" colspan="3">
+            <item row="9" column="0" colspan="4">
+             <widget class="QGroupBox" name="groupBox_3">
+              <property name="title">
+               <string>Apply pattern</string>
+              </property>
+              <layout class="QHBoxLayout" name="horizontalLayout_4">
+               <item>
+                <widget class="QPushButton" name="bcButton">
+                 <property name="text">
+                  <string>BC</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="wcButton">
+                 <property name="text">
+                  <string>WC</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="bcwButton">
+                 <property name="text">
+                  <string>BCW</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="bcwcButton">
+                 <property name="text">
+                  <string>BCWC</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </widget>
+            </item>
+            <item row="6" column="2" colspan="2">
              <widget class="QGroupBox" name="groupBox_2">
               <property name="title">
                <string>Duplicate</string>
