--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -579,6 +579,11 @@
              </item>
              <item>
               <property name="text">
+               <string>Pal. G</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
                <string>Custom</string>
               </property>
              </item>
