Change +/- shortcuts to modify the zoom level, not the precision
These days, unlike in the early prototype days, precision change happens
automatically most of the time. Changing zoom is more important and should
get the shortcut.

Also, use QActions for zoom, change the tool buttons to use them, and add
icons.

--- a/src/frac.qrc
+++ b/src/frac.qrc
@@ -1,4 +1,6 @@
 <RCC>
   <qresource prefix="/MainWindow">
+    <file>icons/zoom-in32.png</file>
+    <file>icons/zoom-out32.png</file>
   </qresource>
 </RCC>
