--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -1477,9 +1477,9 @@
          <number>2</number>
         </property>
         <item>
-         <widget class="QLabel" name="label_10">
+         <widget class="QLabel" name="label_9">
           <property name="text">
-           <string>DEM end:</string>
+           <string>DEM start:</string>
           </property>
          </widget>
         </item>
@@ -1491,9 +1491,9 @@
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="label_9">
+         <widget class="QLabel" name="label_10">
           <property name="text">
-           <string>DEM start:</string>
+           <string>DEM end:</string>
           </property>
          </widget>
         </item>
@@ -1527,6 +1527,20 @@
         </item>
         <item>
          <widget class="QToolButton" name="BinBButton">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_15">
+          <property name="text">
+           <string>SAC/TIA:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QToolButton" name="SACTintButton">
           <property name="text">
            <string>...</string>
           </property>
