--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -227,12 +227,14 @@
     </widget>
     <widget class="QMenu" name="menuNarrow_black_white">
      <property name="title">
-      <string>Narrow black/white</string>
+      <string>Palette interpolation</string>
      </property>
      <addaction name="action_NarrowB"/>
      <addaction name="action_NarrowW"/>
      <addaction name="action_NFactor2"/>
      <addaction name="action_NFactor4"/>
+     <addaction name="separator"/>
+     <addaction name="action_PCircular"/>
     </widget>
     <widget class="QMenu" name="menuColour_rotation">
      <property name="title">
@@ -258,6 +260,8 @@
      <addaction name="action_DEMDist"/>
      <addaction name="action_DEMShading"/>
      <addaction name="action_DEMBoth"/>
+     <addaction name="separator"/>
+     <addaction name="action_DEMColour"/>
     </widget>
     <widget class="QMenu" name="menuAngle_modifiers">
      <property name="title">
@@ -268,6 +272,9 @@
      <addaction name="action_AngleBin"/>
      <addaction name="action_SAC"/>
      <addaction name="action_TIA"/>
+     <addaction name="separator"/>
+     <addaction name="action_AngleColour"/>
+     <addaction name="action_BinInvert"/>
      <addaction name="separator"/>
      <addaction name="action_SACContrast"/>
      <addaction name="action_SACFade"/>
@@ -292,6 +299,7 @@
       <string>&amp;Outcolouring</string>
      </property>
      <addaction name="action_OCDefault"/>
+     <addaction name="action_OCDwell"/>
      <addaction name="action_OCAtom"/>
     </widget>
     <addaction name="menuSmoothing"/>
@@ -301,8 +309,6 @@
     <addaction name="menuShift_minimum"/>
     <addaction name="menuAngle_modifiers"/>
     <addaction name="menuDEM"/>
-    <addaction name="action_DEMColour"/>
-    <addaction name="action_AngleColour"/>
     <addaction name="separator"/>
     <addaction name="menuIncoloring"/>
     <addaction name="menu_Outcolouring"/>
@@ -1956,7 +1962,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Factor 2</string>
+    <string>Narrow by factor 2</string>
    </property>
   </action>
   <action name="action_NFactor4">
@@ -1964,7 +1970,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Factor 4</string>
+    <string>Narrow by factor 4</string>
    </property>
   </action>
   <action name="action_About">
@@ -2480,6 +2486,30 @@
    </property>
    <property name="text">
     <string>&amp;Atom domain</string>
+   </property>
+  </action>
+  <action name="action_OCDwell">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Iterations, palette fills dwell bands</string>
+   </property>
+  </action>
+  <action name="action_PCircular">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Circular palette</string>
+   </property>
+  </action>
+  <action name="action_BinInvert">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Invert second colour for binary</string>
    </property>
   </action>
  </widget>
